# project-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .editorconfig  .gitignore  .gitmodules  Biểu đồ không có tiêu đề.drawio  CMakeLists.txt  CMakePresets.json  Dockerfile  GameClasses.drawio  Makefile  README.md  Untitled Diagram.drawio  annotated.html  azure-pipelines.yml  base_2CMakeLists_8txt.html  base_8cpp.html  base_8cpp__incl.map  base_8cpp__incl.md5  base_8hpp.html  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.md5  base_8hpp_source.html  classbase-members.html  classbase.html  classes.html  create_shortcuts.ps1  deps.json  dir_000004_000001.html  dir_0af1587c8378955de40f48b4bd1869f0.html  dir_0af1587c8378955de40f48b4bd1869f0_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  docker-compose.yml  (+10 more)
.github/actions/: build.yml
.github/actions/window-setting/: action.yml
.github/workflows/: build-ubuntu.yml  build-windows.yml  build.yml  c-cpp.yml  concurrency.yml  environment-test.yml  example-workflow.yml  if-test.yml  input-test.yml  input.yml  main.yml  matrix-test.yml  output-env-if-secret-environment.yml  output-test.yml  output.yml  outputs.yml  reusable-ubuntu.yml  simple-container.yml  test.yml  ubuntu-test.yml  ubuntu.yml  upload-download-artifact.yml  windows-test.yml  windows.yml
app/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.h  ModuleManager.hpp  app.cpp  background.cc  background.h  ball.cc  ball.h  base.cpp  base.hpp  brick.cc  brick.h  constants.h  entity.cc  entity.h  interactions.h  main.cpp  paddle.cc  paddle.h
app/resources/: create_shortcuts.ps1
cmake/: Config.cmake  Coverage.cmake  CustomTarget.cmake  Document.cmake  External.cmake  ExternalAdd.txt.in  ExternalAddSub.txt.in  ExternalCMakeLists.txt.in  ExternalCMakePresets.json.in  FetchLib.cmake  GraphAndDoc.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake  ZooClassConfig.cmake.in  test.txt
docs/: docCfg
include/: CMakeLists.txt  GameManager.hpp  Utils.hpp  background.hpp  ball.hpp  brick.hpp  constants.hpp  entity.hpp  game.hpp  interactions.hpp  paddle.hpp
include/base/: CMakeLists.txt  base.hpp
publish/: app_2CMakeLists_8txt.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  base_8cpp.html  base_8cpp__incl.md5  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp_source.html  classBase-members.html  classBase.html  classes.html  dir_000000_000001.html  dir_0af1587c8378955de40f48b4bd1869f0.html  dir_0af1587c8378955de40f48b4bd1869f0_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ab1c81409f0df724f17c9ef30afee877.html  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  include_2CMakeLists_8txt.html  include_2base_2CMakeLists_8txt.html  src_2CMakeLists_8txt.html
publish/search/: all_1.js  all_3.js  all_5.js  all_7.js  all_8.js  classes_0.js  files_0.js  files_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  searchdata.js
sonar/windows/: download.ps1  extract.ps1
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.cpp  base.hpp
src/game2/: CMakeLists.txt  GameManager.cpp  Utils.cpp  background.cpp  ball.cpp  brick.cpp  entity.cpp  paddle.cpp
src/game2/include/: GameManager.hpp  background.hpp  ball.hpp  brick.hpp  constants.hpp  entity.hpp  paddle.hpp
src/interface/: IGame.h
src/pingpong_game/: .editorconfig  CMakeLists.txt  DBClientGame.cpp  DBClientGame.hpp.cpp  FetchLib.cmake  GameManager.cpp  LoginGame.cpp  PingPongGame.cpp  SoundManager.cpp  ThreadPoolGame.cpp  background.cpp  ball.cpp  brick.cpp  dbclientGame.cpp  entity.cpp  entityManager.cpp  interactions.cpp  loginGame.cpp  note.txt  paddle.cpp  soundplayer.cpp  wallHelper.cpp
src/pingpong_game/include/: DBClientGame.hpp  LoginGame.hpp  PingPongGame.hpp  SoundManager.hpp  ThreadPoolGame.hpp  background.hpp  ball.hpp  brick.hpp  constants.hpp  dbclientGame.hpp  entity.hpp  entityManager.hpp  interactions.hpp  loginGame.hpp  paddle.hpp  soundplayer.hpp  wallHelper.hpp
src/pingpong_game/include/pingpong_game_utility/: background.hpp  ball.hpp  brick.hpp  constants.hpp  countingtext.hpp  entity.hpp  entityManager.hpp  entitymanager.hpp  helper.hpp  interactions.hpp  paddle.hpp  resource_integrity.hpp  soundadapter.hpp  soundplayer.hpp  threadpool.hpp  timer.hpp  wallHelper.hpp
src/pingpong_game/resources/: CMakeLists.txt  generate_manifest.cpp  resources_manifest.json  wall.csv
src/pingpong_game/utility/: CMakeLists.txt  background.cpp  ball.cpp  brick.cpp  countingtext.cpp  entity.cpp  entityManager.cpp  entitymanager.cpp  helper.cpp  interactions.cpp  paddle.cpp  soundplayer.cpp  threadpool.cpp  wallHelper.cpp
src/widget/: CMakeLists.txt  Frame.cpp  Text.cpp
src/widget/include/: Frame.hpp  Text.hpp
test/: CMakeLists.txt  test.cpp
test/resources/: benchmark.csv
